--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Order</string>
     <string name="action_settings">Settings</string>
 
-    <string name="lbl_restaurant_name">XYZ Restaurant...</string>
+    <string name="lbl_restaurant_name">XYZ Restaurant…</string>
 
     <string name="order_fragment_label">Order Screen</string>
     <string name="ingredient_fragment_label">Ingredient Screen</string>
@@ -17,4 +17,6 @@
 
     <string name="hint_search_ingredient">Search for an item</string>
     <string name="hint_search_order">#</string>
+
+    <string name="lbl_available">Available</string>
 </resources>
